| Summary: | ASTERISK-27449: [PATCH] When failing to acquire target during attended transfer, display wanted extension | ||
| Reporter: | Niklas Larsson (pnlarsson) | Labels: | |
| Date Opened: | 2017-11-29 06:06:52.000-0600 | Date Closed: | 2017-12-06 06:45:37.000-0600 |
| Priority: | Trivial | Regression? | No |
| Status: | Closed/Complete | Components: | Core/Bridging/bridge_basic |
| Versions: | 13.18.2 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Patch to display/log which extension that asterisk could not find.
Make it easier to find what is wrong. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2017-11-29 06:06:52.678-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2017-12-06 06:45:38.746-0600 Change 7392 merged by Jenkins2: bridge_basic.c: Update transfer diagnostic messages. [https://gerrit.asterisk.org/7392|https://gerrit.asterisk.org/7392] By: Friendly Automation (friendly-automation) 2017-12-06 06:52:30.193-0600 Change 7449 merged by Jenkins2: bridge_basic.c: Update transfer diagnostic messages. [https://gerrit.asterisk.org/7449|https://gerrit.asterisk.org/7449] By: Friendly Automation (friendly-automation) 2017-12-06 07:08:57.889-0600 Change 7448 merged by Joshua Colp: bridge_basic.c: Update transfer diagnostic messages. [https://gerrit.asterisk.org/7448|https://gerrit.asterisk.org/7448] By: Friendly Automation (friendly-automation) 2017-12-07 06:35:57.917-0600 Change 7450 merged by Jenkins2: bridge_basic.c: Update transfer diagnostic messages addendum. [https://gerrit.asterisk.org/7450|https://gerrit.asterisk.org/7450] By: Friendly Automation (friendly-automation) 2017-12-07 06:41:59.622-0600 Change 7452 merged by Joshua Colp: bridge_basic.c: Update transfer diagnostic messages addendum. [https://gerrit.asterisk.org/7452|https://gerrit.asterisk.org/7452] By: Friendly Automation (friendly-automation) 2017-12-07 06:42:09.916-0600 Change 7451 merged by Joshua Colp: bridge_basic.c: Update transfer diagnostic messages addendum. [https://gerrit.asterisk.org/7451|https://gerrit.asterisk.org/7451] | ||